--- a/packages/data/pubspec.yaml
+++ b/packages/data/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   #External packages
   http: ^0.13.0
   dartz: ^0.10.0-nullsafety.1
+  hive: ^2.0.0
+  hive_flutter: ^1.0.0
+  path_provider: ^2.0.1
 
   # Personal packages
   domain:
@@ -25,6 +28,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # External packages
+  hive_generator: ^1.0.0
+  build_runner:
     
 flutter:
   uses-material-design: true
