--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   dartz: ^0.10.0-nullsafety.1
   get_it: ^6.0.0
   hive: ^2.0.0
+  hive_flutter: ^1.0.0
+  path_provider: ^2.0.1
 
   # Internal packages
   data:
@@ -29,6 +31,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # External packages
+  hive_generator: ^1.0.0
+  build_runner:
 
 flutter:
   uses-material-design: true
