--- a/packages/domain/pubspec.yaml
+++ b/packages/domain/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   #External packages
   dartz: ^0.10.0-nullsafety.1
+  get_it: ^6.0.0
 
   # Personal packages
   data:
@@ -22,6 +23,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # External packages
   mockito: ^5.0.2
   build_runner: ^1.12.2
     
