--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,6 @@ dependencies:
   hooks_riverpod: ^0.13.1
   dartz: ^0.10.0-nullsafety.1
   get_it: ^6.0.0
-  hive: ^2.0.0
-  hive_flutter: ^1.0.0
-  path_provider: ^2.0.1
 
   # Internal packages
   data:
@@ -33,11 +30,13 @@ dev_dependencies:
     sdk: flutter
 
   # External packages
-  hive_generator: ^1.0.0
-  build_runner:
+  mockito: ^5.0.2
+  build_runner: ^1.12.2
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
 
   
   
