--- a/packages/data/pubspec.yaml
+++ b/packages/data/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   hive_flutter: ^1.0.0
   path_provider: ^2.0.1
   get_it: ^6.0.0
+  equatable: ^2.0.0
 
   # Personal packages
   domain:
