--- a/packages/domain/pubspec.yaml
+++ b/packages/domain/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   #External packages
   dartz: ^0.10.0-nullsafety.1
   get_it: ^6.0.0
+  equatable: ^2.0.0
 
   # Personal packages
   data:
