--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   hooks_riverpod: ^0.13.1
   dartz: ^0.10.0-nullsafety.1
   get_it: ^6.0.0
+  equatable: ^2.0.0
 
   # Internal packages
   data:
